# MLOps-Lab3

./: .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  app.py  class_labels.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: CICD.yml
api/: api.py
cli/: cli.py
models/: pet_classifier_model.onnx
mylib/: classifier.py  logic.py  serialize.py  train.py
templates/: home.html
tests/: test_api.py  test_classifier.py  test_cli.py  test_logic.py  test_serialize.py  test_train.py
